--- a/Bucketlist/Base.lproj/Main.storyboard
+++ b/Bucketlist/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Bucketlist" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="Bucketlist" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,7 +22,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="e3b-bJ-t9i">
+                            <tableView contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="e3b-bJ-t9i">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
@@ -42,15 +42,18 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="e3b-bJ-t9i" id="QmX-0p-X06"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1076" y="129.98500749625188"/>
         </scene>
-        <!--View Controller-->
+        <!--Trip View Controller-->
         <scene sceneID="edB-x2-5cE">
             <objects>
-                <viewController id="NgZ-Np-Qm9" sceneMemberID="viewController">
+                <viewController id="NgZ-Np-Qm9" customClass="TripViewController" customModule="Bucketlist" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="485-We-bib"/>
                         <viewControllerLayoutGuide type="bottom" id="Qd8-F3-ph7"/>
@@ -60,17 +63,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y4R-EH-LVh">
-                                <rect key="frame" x="164" y="357" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="172" y="357" width="30" height="30"/>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="addTapped:" destination="NgZ-Np-Qm9" eventType="touchUpInside" id="6qA-sZ-c8r"/>
+                                </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H9h-VX-Y2Z">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="travel.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="H9h-VX-Y2Z">
                                 <rect key="frame" x="67" y="109" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="2ov-n9-Xju"/>
                                     <constraint firstAttribute="width" constant="240" id="Oc5-P1-qk4"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PHV-qd-3Rq">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Bestemming" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PHV-qd-3Rq">
                                 <rect key="frame" x="67" y="282" width="240" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -90,10 +96,22 @@
                     </view>
                     <navigationItem key="navigationItem" id="9UC-iv-dPQ">
                         <rightBarButtonItems>
-                            <barButtonItem systemItem="camera" id="rYj-Pq-joo"/>
-                            <barButtonItem title="Foto's" id="Fut-9a-YCc"/>
+                            <barButtonItem systemItem="camera" id="rYj-Pq-joo">
+                                <connections>
+                                    <action selector="cameraTapped:" destination="NgZ-Np-Qm9" id="0nE-Y0-1i0"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Foto's" id="Fut-9a-YCc">
+                                <connections>
+                                    <action selector="fotosTapped:" destination="NgZ-Np-Qm9" id="fEy-yd-uWA"/>
+                                </connections>
+                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <connections>
+                        <outlet property="textField" destination="PHV-qd-3Rq" id="VFT-xL-g2R"/>
+                        <outlet property="tripImage" destination="H9h-VX-Y2Z" id="eBv-1d-vhS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dvg-SK-zqV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -118,4 +136,7 @@
             <point key="canvasLocation" x="268" y="130"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="travel.jpg" width="225" height="225"/>
+    </resources>
 </document>
